// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ToggleFavoriteButton rendering tests ToggleFavoriteButton - isFavorite false - test 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive text-primary-foreground h-9 has-[>svg]:px-3 cursor-pointer rounded bg-transparent p-1 transition-colors hover:bg-slate-100"
    data-slot="tooltip-trigger"
    data-state="closed"
    data-testid="toggle-favorite-btn"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-star h-5 w-5 text-slate-400"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
      />
    </svg>
  </button>
  <div
    data-testid="mock-react-presence"
  >
    <div
      data-testid="mock-react-portal"
    >
      <div
        data-testid="mock-react-presence"
      >
        <div
          data-radix-popper-content-wrapper=""
          style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 0px); min-width: max-content; --radix-popper-available-width: -16px; --radix-popper-available-height: 0px; --radix-popper-anchor-width: 0px; --radix-popper-anchor-height: 0px; --radix-popper-transform-origin: 0px 0px;"
        >
          <div
            class="bg-foreground text-background animate-in fade-in-0 zoom-in-95 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=closed]:zoom-out-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2 z-50 w-fit origin-(--radix-tooltip-content-transform-origin) rounded-md px-3 py-1.5 text-xs text-balance"
            data-align="center"
            data-side="top"
            data-slot="tooltip-content"
            data-state="closed"
            style="--radix-tooltip-content-transform-origin: var(--radix-popper-transform-origin); --radix-tooltip-content-available-width: var(--radix-popper-available-width); --radix-tooltip-content-available-height: var(--radix-popper-available-height); --radix-tooltip-trigger-width: var(--radix-popper-anchor-width); --radix-tooltip-trigger-height: var(--radix-popper-anchor-height);"
          >
            Zu Favoriten hinzufügen
            <span
              style="position: absolute; bottom: 0px; transform: translateY(100%); left: 0px;"
            >
              <svg
                class="bg-foreground fill-foreground z-50 size-2.5 translate-y-[calc(-50%_-_2px)] rotate-45 rounded-[2px]"
                height="5"
                preserveAspectRatio="none"
                style="display: block;"
                viewBox="0 0 30 10"
                width="10"
              >
                <polygon
                  points="0,0 30,0 15,10"
                />
              </svg>
            </span>
            <span
              id="radix-_r_1_"
              role="tooltip"
              style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
            >
              Zu Favoriten hinzufügen
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ToggleFavoriteButton rendering tests ToggleFavoriteButton - isFavorite true - test 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive text-primary-foreground h-9 has-[>svg]:px-3 cursor-pointer rounded bg-transparent p-1 transition-colors hover:bg-slate-100"
    data-slot="tooltip-trigger"
    data-state="closed"
    data-testid="toggle-favorite-btn"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-star h-5 w-5 fill-yellow-400 text-yellow-400"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
      />
    </svg>
  </button>
  <div
    data-testid="mock-react-presence"
  >
    <div
      data-testid="mock-react-portal"
    >
      <div
        data-testid="mock-react-presence"
      >
        <div
          data-radix-popper-content-wrapper=""
          style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 0px); min-width: max-content; --radix-popper-available-width: -16px; --radix-popper-available-height: 0px; --radix-popper-anchor-width: 0px; --radix-popper-anchor-height: 0px; --radix-popper-transform-origin: 0px 0px;"
        >
          <div
            class="bg-foreground text-background animate-in fade-in-0 zoom-in-95 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=closed]:zoom-out-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2 z-50 w-fit origin-(--radix-tooltip-content-transform-origin) rounded-md px-3 py-1.5 text-xs text-balance"
            data-align="center"
            data-side="top"
            data-slot="tooltip-content"
            data-state="closed"
            style="--radix-tooltip-content-transform-origin: var(--radix-popper-transform-origin); --radix-tooltip-content-available-width: var(--radix-popper-available-width); --radix-tooltip-content-available-height: var(--radix-popper-available-height); --radix-tooltip-trigger-width: var(--radix-popper-anchor-width); --radix-tooltip-trigger-height: var(--radix-popper-anchor-height);"
          >
            Aus Favoriten entfernen
            <span
              style="position: absolute; bottom: 0px; transform: translateY(100%); left: 0px;"
            >
              <svg
                class="bg-foreground fill-foreground z-50 size-2.5 translate-y-[calc(-50%_-_2px)] rotate-45 rounded-[2px]"
                height="5"
                preserveAspectRatio="none"
                style="display: block;"
                viewBox="0 0 30 10"
                width="10"
              >
                <polygon
                  points="0,0 30,0 15,10"
                />
              </svg>
            </span>
            <span
              id="radix-_r_0_"
              role="tooltip"
              style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
            >
              Aus Favoriten entfernen
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
